Add example ris file

--- a/views/root.erb
+++ b/views/root.erb
@@ -6,7 +6,7 @@
     <a href="/logout">Log out</a>
 
     <form method="post" action="/import" enctype="multipart/form-data">
-      <input type="file" name="ris_file" accept="application/x-research-info-systems">
+      <input type="file" name="ris_file" accept=".ris,application/x-research-info-systems">
       <br>
       <input type="submit" value="import">
     </form>
